# sera-rs

./: .gitignore  Cargo.toml
src/: bufferfx.c  copy.rs  draw.rs  lib.rs  macros.rs  sera.c  sera.h  util.rs
tests/: draw.rs
